--- a/src/app/police/policreg/policreg.component.html
+++ b/src/app/police/policreg/policreg.component.html
@@ -1,5 +1,11 @@
-<h1 style="text-align: center ;color: crimson;">Police Registeration Form</h1>
-
+<div class="row" style="background: #092930;color: white;">
+    <div class="col-md-12">
+    <div class="form-group" style="text-align: center;">
+        <h1 style="text-align: center"> Police Registration Form</h1>
+  </div>
+  </div>
+  </div>
+  <br>
 <div class="row" >
   <div class="col-md-1"></div>
   <div class="col-md-5">
@@ -64,8 +70,20 @@
   
   </div>
 </div>
-<div class="col-md-12">
-  <div class="form-group" style="text-align: center;">
-    <button style="width: 100px;" (click)="onRegister()" class="btn btn-success">Register</button>
+<div class="row">
+  <div class="col-md-5"> 
+
   </div>
+  <div class="col-md-1">
+      <div class="form-group" style="text-align: center;">
+          <button style="width: 100px;" (click)="onVerify()" class="btn btn-success">Register</button>
+        </div>
+      </div>
+  <div class="col-md-1">
+      <div class="form-group" style="text-align: center;">
+          <button style="width: 100px;" (click)="GoHome()" class="btn btn-danger">Cancel</button>   
+        </div>    
+  </div>
+  <div class="col-md-5"></div>
+  
 </div>
