--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -1,7 +1,7 @@
 <h1>List of all Users Associated With us</h1>
 <div class="table-responsive">
     
-    <table class="table table-striped table-hover">
+    <table class="table table-striped table-hover" style="text-align: left;">
         <thead>
             <tr>
                 <th> Id</th>
