--- a/src/app/ngo/ngoreg/ngoreg.component.html
+++ b/src/app/ngo/ngoreg/ngoreg.component.html
@@ -1,65 +1,12 @@
 
-<!--   
-<div class="row" >
-  <div class="col-md-3"></div>
-  <div class="col-md-6">
-    <div class="form-group">
-      <label for="">Full Name</label>
-      <input [(ngModel)]="name" type="text" class="form-control">
-    </div>
-    <div class="form-group">
-      <label for="">Email</label>
-      <input [(ngModel)]="email" type="email" class="form-control">
-    </div>
-    <div class="form-group">
-      <label for="">Phone</label>
-      <input [(ngModel)]="phoneno" type="text" class="form-control">
-    </div>
-    <div class="form-group">
-      <label for="">City</label>
-      <input [(ngModel)]="city" type="text" class="form-control">
-    </div>
-    <div class="form-group">
-      <label for="">State</label>
-      <input [(ngModel)]="state" type="text" class="form-control" >
-    </div>
-
-    <div class="form-group">
-        <label for="">Country</label>
-        <input [(ngModel)]="country" type="text" class="form-control">
-      </div>
-    <div class="form-group">
-        <label for=""> NGO Name</label>
-        <input [(ngModel)]="ngoname" type="text" class="form-control">
-      </div>
-      <div class="form-group">
-        <label for="">NGO City</label>
-        <input [(ngModel)]="ngocity" type="text" class="form-control">
-      </div>
-      <div class="form-group">
-        <label for="">NGO State</label>
-        <input [(ngModel)]="ngostate" type="text" class="form-control">
-      </div>
-      <div class="form-group">
-        <label for="">NGO Country</label>
-        <input [(ngModel)]="ngocountry" type="text" class="form-control">
-      </div>
-      <div class="form-group">
-        <label for="">NGO Contact No</label>
-        <input [(ngModel)]="ngophoneno" type="text" class="form-control">
-      </div>
-      
-    <div class="form-group">
-        <label for="">Password</label>
-        <input [(ngModel)]="password" type="password" class="form-control">
-      </div>
+<div class="row" style="background:#193815;color: white;">
+    <div class="col-md-12">
     <div class="form-group" style="text-align: center;">
-        <button (click)="onRegister()" class="btn btn-success">Register</button>
-    </div>
+        <h1 style="text-align: center"> NGO Registration Form</h1>
   </div>
-</div> --> 
-<h1 style="text-align: center ;color:green;">NGO Registeration Form</h1>
-
+  </div>
+  </div>
+  <br>
 <div class="row" >
   <div class="col-md-1"></div>
   <div class="col-md-5">
@@ -124,8 +71,20 @@
   
   </div>
 </div>
-<div class="col-md-12">
-  <div class="form-group" style="text-align: center;">
-    <button style="width: 100px;" (click)="onRegister()" class="btn btn-success">Register</button>
+<div class="row">
+    <div class="col-md-5"> 
+  
+    </div>
+    <div class="col-md-1">
+        <div class="form-group" style="text-align: center;">
+            <button style="width: 100px;" (click)="onVerify()" class="btn btn-success">Register</button>
+          </div>
+        </div>
+    <div class="col-md-1">
+        <div class="form-group" style="text-align: center;">
+            <button style="width: 100px;" (click)="GoHome()" class="btn btn-danger">Cancel</button>   
+          </div>    
+    </div>
+    <div class="col-md-5"></div>
+    
   </div>
-</div>
